fix c-snap with row => flex nowrap

--- a/_dev/css/components/_components.snap.scss
+++ b/_dev/css/components/_components.snap.scss
@@ -5,6 +5,9 @@
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch; /* Important for iOS devices */
 }
+.c-snap.row{
+  flex-wrap: nowrap;
+}
 
 @include media-breakpoint-mobile {
   .c-snap--mobile {
